...
        android:text="Author"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBookTitle"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/text_style"
        android:ems="10"
        android:hint="Max length 30"
...
        android:maxLength="30"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <EditText
        android:id="@+id/editBookAuthor"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/text_style"
        android:ems="10"
...
        android:textAlignment="center"
        android:text="Category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBookAuthor" />

    <EditText
        android:id="@+id/editBookPrice"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/text_style"
        android:ems="10"
...
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookPrice" />

    <Spinner

        android:id="@+id/editBookCategory"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/text_style"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:onClick="buttonEditBookCancel"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deletePostedBook"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_style"
        android:onClick="buttonDeletePostedBook"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editSubmit"
        app:layout_constraintStart_toEndOf="@+id/editCancel" />

    <Button
        android:id="@+id/editSubmit"
        android:layout_width="160dp"
        android:layout_height="60dp"
...
