...
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/searchByCategory"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:spinnerMode="dialog"
...
                    android:layout_width="1.5dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#eeeeee"/>

                <Button
                    android:id="@+id/priceLowToHigh"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:onClick="buttonPriceLowToHigh"
                    android:text="Price ↑" />

                <Button
                    android:id="@+id/priceHighToLow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
...
